Implements entry point for OST /api/adb/shell (backend only)
